

export default class Connection {
    //Valeurs pareils? URL? Quoi d'autres?
    //TODO: Develop and implement this class and value once the used IP address is implemented.
    _url;

    get url(){
        return this._url;
    }
}